fixed waves alignment and centered sign up

--- a/src/index.scss
+++ b/src/index.scss
@@ -214,3 +214,8 @@ p.hack {
 .dropdownIcon:hover {
   color: $output-orange
 }
+
+.signUpText {
+  margin-top: 105px;
+  margin-left: 80px;
+}
